<resources>

    <string name="app_name">安卓框架</string>
    <string name="refresh_down_text">下拉刷新</string>
    <string name="refresh_release_text">松开即可刷新</string>
    <string name="refresh_doing">正在刷新</string>
    <string name="refresh_last_time">上次更新：%1$s</string>
    <string name="refresh_load_ing">正在加载中…</string>
    <string name="refresh_load_close">已经全部加载</string>
    <string name="refresh_load_error">点击重新加载</string>
    <string name="refresh_load_more">上拉加载更多</string>
    <string name="refresh_load_more_release">释放即可加载</string>

    <string name="API_FLAG_NET_EXCEPTION">网络异常，请稍后重试</string>
    <string name="API_FLAG_NET_FAIL">@string/API_FLAG_NET_EXCEPTION</string>
    <string name="API_FLAG_CON_EXCEPTION">@string/API_FLAG_NET_EXCEPTION</string>
    <string name="API_FLAG_CON_BROKEN">@string/API_FLAG_NET_EXCEPTION</string>
    <string name="API_FLAG_CON_TIMEOUT">@string/API_FLAG_NET_EXCEPTION</string>
    <string name="API_FLAG_CON_UNKNOWNHOSTEXCEPTION">@string/API_FLAG_NET_EXCEPTION</string>
    <string name="API_FLAG_NO_RESPONSE">@string/API_FLAG_NET_EXCEPTION</string>
    <string name="API_FLAG_DATA_ERROR">@string/API_FLAG_NET_EXCEPTION</string>
    <string name="API_FLAG_ANALYSIS_ERROR">@string/API_FLAG_NET_EXCEPTION</string>
    <string name="API_FLAG_REPEAT">正在努力加载中...</string>

    <string name="load_more">加载更多</string>
    <string name="loading">加载中&#8230;</string>
    <string name="load_complete">加载完成</string>
    <string name="hint_net_fail">网络连接失败，点击重试</string>
    <string name="hint_nodata">没有数据</string>
    <string name="back">返回</string>
    <string name="confirm">确定</string>
    <string name="complete">完成</string>
    <string name="cancel">取消</string>

    <string name="timer_send_re">重新发送</string>
    <string name="timer_sending">发送中...</string>

    <string name="crop">剪切</string>

    <string name="empty"></string>

    <string name="number_zero">0</string>
    <string name="number_max">999999999</string>
    <string name="number_money">0.00</string>

    <string name="edit_input_hint">请输入</string>
    <string name="edit_empty_hint">不能为空</string>
    <string name="edit_format_error">格式错误</string>
    <string name="edit_input_hint_format">请输入%1$s</string>
    <string name="edit_empty_hint_format">%1$s不能为空</string>
    <string name="edit_format_error_format">%1$s格式错误</string>

    <string name="listview_header_hint_normal">下拉刷新</string>
    <string name="listview_header_hint_release">释放立即刷新</string>
    <string name="listview_loading">正在加载...</string>
    <string name="nomore_loading">没有了</string>
    <string name="refreshing">正在刷新...</string>
    <string name="refresh_done">刷新完成</string>
    <string name="listview_header_last_time">上次更新时间：</string>

    <!--footer-->
    <string name="list_footer_loading">正在加载中…</string>
    <string name="list_footer_network_error">点击重新加载</string>
    <string name="list_footer_end">已全部加载完</string>

    <string name="badge_overflow">%1$d+</string>

    <string name="text_just">刚刚</string>
    <string name="text_seconds_ago">秒前</string>
    <string name="text_minute_ago">分钟前</string>
    <string name="text_hour_ago">小时前</string>
    <string name="text_day_ago">天前</string>
    <string name="text_month_ago">月前</string>
    <string name="text_year_ago">年前</string>

    <string name="date_picker_title">%1$d年 %2$d月 %3$d日 星期%4$s</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="test_date">2017–07–07 07:07</string>
    <string name="test_date_short">2017–07–07</string>
    <string name="test_date_time">07:07</string>

    <string name="album">相册</string>
    <string name="album_pager_format">（%1$d/%2$d）</string>
    <string name="album_more_format">多图选择（%1$d）</string>
    <string name="album_single">单图选择</string>

    <string name="sunday">周日</string>
    <string name="monday">周一</string>
    <string name="tuesday">周二</string>
    <string name="wednesday">周三</string>
    <string name="thursday">周四</string>
    <string name="friday">周五</string>
    <string name="saturday">周六</string>
</resources>