<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_normal">

        <Button
            android:id="@+id/date_picker_btnCancel"
            style="@style/AppBaseTheme.BtnStyle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/btn_picker_left_selector"
            android:gravity="center"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/date_picker_btnConfirm"
            style="@style/AppBaseTheme.BtnStyle"
            android:layout_width="0dp"
            android:layout_height="36dp"
            android:layout_weight="1"
            android:background="@drawable/btn_picker_right_selector"
            android:gravity="center"
            android:minHeight="0dp"
            android:padding="0dp"
            android:text="@string/confirm" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray_light" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="horizontal"
        android:splitMotionEvents="false">

        <com.hy.frame.widget.loopview.LoopWheelView
            android:id="@+id/date_picker_lwvYear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:lwvCenterTextColor="@color/txt_black"
            app:lwvDividerColor="@color/divider_gray_light"
            app:lwvDividerHeight="0dp"
            app:lwvGradientColor="@color/white"
            app:lwvTextSize="@dimen/txt_medium"
            app:lwvUnitPadding="@dimen/margin_normal"
            app:lwvUnitText="@string/year"
            app:lwvUnitTextSize="@dimen/txt_small" />

        <com.hy.frame.widget.loopview.LoopWheelView
            android:id="@+id/date_picker_lwvMonth"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:lwvCenterTextColor="@color/txt_black"
            app:lwvDividerColor="@color/divider_gray_light"
            app:lwvDividerHeight="0dp"
            app:lwvGradientColor="@color/white"
            app:lwvTextSize="@dimen/txt_medium"
            app:lwvUnitPadding="@dimen/margin_normal"
            app:lwvUnitText="@string/month"
            app:lwvUnitTextSize="@dimen/txt_small" />

        <com.hy.frame.widget.loopview.LoopWheelView
            android:id="@+id/date_picker_lwvDay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:lwvCenterTextColor="@color/txt_black"
            app:lwvDividerColor="@color/divider_gray_light"
            app:lwvDividerHeight="0dp"
            app:lwvGradientColor="@color/white"
            app:lwvTextSize="@dimen/txt_medium"
            app:lwvUnitPadding="@dimen/margin_normal"
            app:lwvUnitText="@string/day"
            app:lwvUnitTextSize="@dimen/txt_small" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/divider_gray_light" />

    <TextView
        android:id="@+id/date_picker_txtTitle"
        style="@style/AppBaseTheme.TxtStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:text="@string/date_picker_title"
        android:textColor="@color/txt_gray" />

</LinearLayout>