<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_dialog_bg"
    android:orientation="vertical">

    <TextView
        android:id="@+id/confirm_txtTitle"
        style="@style/AppBaseTheme.TxtStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:minHeight="50dp"
        android:padding="@dimen/margin_normal"
        android:singleLine="true"
        android:text="@string/app_name"
        android:textSize="@dimen/txt_big" />

    <TextView
        android:id="@+id/confirm_txtContent"
        style="@style/AppBaseTheme.TxtStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_txtTitle"
        android:gravity="center"
        android:maxLines="10"
        android:minHeight="80dp"
        android:minLines="2"
        android:padding="@dimen/margin_normal"
        android:text="@string/app_name"
        android:textColor="@color/txt_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/confirm_txtContent"
        android:orientation="horizontal"
        android:padding="@dimen/margin_normal">

        <TextView
            android:id="@+id/confirm_btnCancel"
            style="@style/AppBaseTheme.TxtStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_picker_left_selector"
            android:gravity="center"
            android:minWidth="60dp"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textColor="@color/txt_gray" />

        <TextView
            android:id="@+id/confirm_btnConfirm"
            style="@style/AppBaseTheme.TxtStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/btn_picker_right_selector"
            android:gravity="center"
            android:minWidth="60dp"
            android:padding="10dp"
            android:text="@string/confirm"
            android:textColor="?attr/appThemeColor" />

    </LinearLayout>
</RelativeLayout>